--- a/somang_project/admin-app/Dockerfile.dev
+++ b/somang_project/admin-app/Dockerfile.dev
@@ -14,13 +14,16 @@ WORKDIR /app
 RUN npm install -g pnpm
 
 # 4. 의존성 설치를 위해 package.json 파일을 먼저 복사합니다.
-COPY package.json ./
+COPY package.json pnpm-lock.yaml ./
 
 # 5. 의존성을 설치합니다.
 RUN pnpm install
 
 # 6. 나머지 소스 코드를 복사합니다.
 COPY . .
+
+# 애플리케이션 실행 포트 노출
+EXPOSE 3000
 
 # 7. 앱을 실행할 기본 명령어를 설정합니다.
 CMD ["pnpm", "run", "dev"]
