--- a/somang_project/user-app/Dockerfile.dev
+++ b/somang_project/user-app/Dockerfile.dev
@@ -22,5 +22,8 @@ RUN pnpm install
 # 6. 나머지 소스 코드를 복사합니다.
 COPY . .
 
+# 애플리케이션 실행 포트 노출
+EXPOSE 3000
+
 # 7. 앱을 실행할 기본 명령어를 설정합니다.
 CMD ["pnpm", "run", "dev"]
