--- a/somang_project/biz-app/package.json
+++ b/somang_project/biz-app/package.json
@@ -12,7 +12,8 @@
     "@supabase/ssr": "^0.6.1",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "supabase": "^2.31.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
