--- a/somang_project/user-app/package.json
+++ b/somang_project/user-app/package.json
@@ -13,7 +13,8 @@
     "@supabase/supabase-js": "^2.50.2",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -24,6 +25,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "supabase": "^2.31.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
