--- a/somang_project/user-app/package.json
+++ b/somang_project/user-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 50331",
+    "dev:https": "next dev -p 50443 --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
