--- a/somang_project/admin-app/package.json
+++ b/somang_project/admin-app/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 50333",
+    "dev:https": "node server.js",
+    "dev:docker": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
