--- a/somang_project/user-app/package.json
+++ b/somang_project/user-app/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 50331",
-    "dev:https": "next dev -p 50443 --experimental-https",
+    "dev:https": "node server.js",
+    "dev:docker": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
