--- a/somang_project/t-bridge-mobile/package.json
+++ b/somang_project/t-bridge-mobile/package.json
@@ -20,6 +20,7 @@
     "expo-linking": "~7.0.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-safe-area-context": "^5.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "13.13.5"
   },
