--- a/somang_project/t-bridge-mobile/package.json
+++ b/somang_project/t-bridge-mobile/package.json
@@ -15,6 +15,7 @@
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@supabase/supabase-js": "^2.50.2",
     "expo": "~53.0.0",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.0.1",
     "expo-linking": "~7.0.3",
