--- a/somang_project/t-bridge-mobile/package.json
+++ b/somang_project/t-bridge-mobile/package.json
@@ -12,10 +12,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-firebase/app": "^21.4.0",
+    "@react-native-firebase/messaging": "^21.4.0",
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@supabase/supabase-js": "^2.50.2",
     "expo": "~53.0.0",
+    "expo-constants": "~17.1.7",
+    "expo-device": "~7.1.4",
     "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.0.1",
     "expo-linking": "~7.0.3",
