--- a/somang_project/t-bridge-mobile/app.json
+++ b/somang_project/t-bridge-mobile/app.json
@@ -6,8 +6,13 @@
     "orientation": "portrait",
     "userInterfaceStyle": "light",
     "scheme": "tbridge",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "plugins": [
+      "expo-dev-client",
       [
         "expo-location",
         {
@@ -19,9 +24,6 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/icon.png",
-          "color": "#1e40af",
-          "defaultChannel": "default",
           "sounds": []
         }
       ],
@@ -31,6 +33,9 @@
       [
         "@react-native-firebase/messaging",
         {
+          "android": {
+            "requestIgnoreBatteryOptimizations": false
+          },
           "ios": {
             "useFrameworkSystemDefault": false
           }
@@ -39,6 +44,10 @@
       [
         "expo-build-properties",
         {
+          "android": {
+            "enableProguardInReleaseBuilds": false,
+            "enableShrinkResourcesInReleaseBuilds": false
+          },
           "ios": {
             "useFrameworks": "static"
           }
@@ -48,14 +57,13 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.tbridge.mobile",
-      "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "이 앱은 견적 요청 시 위치 정보를 사용합니다.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "이 앱은 견적 요청 시 위치 정보를 사용합니다."
       }
     },
     "android": {
-      "package": "com.tbridge.mobile",
+      "package": "com.tbridge.userapp",
       "googleServicesFile": "./google-services.json",
       "permissions": [
         "ACCESS_FINE_LOCATION",
@@ -63,8 +71,15 @@
         "POST_NOTIFICATIONS",
         "WAKE_LOCK",
         "RECEIVE_BOOT_COMPLETED",
-        "VIBRATE"
+        "VIBRATE",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
       ]
+    },
+    "extra": {
+      "eas": {
+        "projectId": "4a305712-c3a0-4c64-8ca5-7db04d57bd97"
+      }
     }
   }
 }
