--- a/somang_project/t-bridge-mobile/package.json
+++ b/somang_project/t-bridge-mobile/package.json
@@ -11,23 +11,30 @@
     "device": "expo start --localhost"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/messaging": "^21.4.0",
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@supabase/supabase-js": "^2.50.2",
-    "expo": "~53.0.0",
+    "expo": "~53.0.20",
+    "expo-build-properties": "^0.14.8",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
+    "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
+    "expo-modules-autolinking": "^2.1.14",
+    "expo-modules-core": "^2.5.0",
     "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
-    "expo-web-browser": "~14.0.1",
-    "expo-linking": "~7.0.3",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
@@ -36,5 +43,12 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
