--- a/somang_project/biz-app/Dockerfile.prod
+++ b/somang_project/biz-app/Dockerfile.prod
@@ -18,6 +18,8 @@ RUN pnpm install
 
 # 소스 코드 복사 및 운영용으로 빌드
 COPY . .
+
+# 빌드 실행
 RUN pnpm build
 
 # ================= STAGE 2: Production =================
@@ -33,8 +35,8 @@ COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
 
-# 애플리케이션 실행 포트 노출
-EXPOSE 3000
+# 애플리케이션 실행 포트 노출 (HTTP와 HTTPS 모두)
+EXPOSE 60332 60444
 
 # 최종적으로 최적화된 서버를 실행합니다.
 CMD ["node", "server.js"]
